--- a/style.css
+++ b/style.css
@@ -5,3 +5,72 @@
     padding: 0;
     font-family: cursive;
 }
+
+div.main-title {
+    background-color:red;
+    text-align: center;
+    padding: 25px;
+}
+
+div.main-title h1 {
+    color: white;
+    border: white 5px solid;
+    border-radius: 15px;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+nav.nav-links {
+    background-color: grey;
+    padding: 10px;
+    text-align: center;
+}
+
+nav.nav-links a {
+    color: white;
+    margin: 100px;
+}
+
+div.banner-container img {
+    width: 100%;
+    border-bottom: red 10px solid;
+}
+
+div.mario-intro h1 {
+    color: red;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 45px;
+}
+
+div.mario-intro p {
+    text-align: justify;
+    margin: 20px 100px 30px;
+    font-size: 25px;
+    line-height: 50px;
+}
+
+h6 {
+    color: white;
+    background-color: grey;
+    text-align: center;
+    font-size: 20px;
+    padding: 15px;
+}
+
+nav.nav-links a.nav-link1:hover {
+    color: red;
+}
+
+nav.nav-links a.nav-link2:hover {
+    color: red;
+}
+
+nav.nav-links a.nav-link3:hover {
+    color: red;
+}
+
+nav.nav-links a.nav-link4:hover {
+    color: red;
+}
