--- a/style.css
+++ b/style.css
@@ -59,6 +59,46 @@ h6 {
     padding: 15px;
 }
 
+div.friend{
+    text-align: center;
+    background-color: lightgrey;
+    margin: 70px 120px;
+    border-radius: 30px;
+    padding: 20px 0;
+}
+
+div.friend h4 {
+    color: red;
+    font-size: 30px;
+}
+
+div.friend p {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 nav.nav-links a.nav-link1:hover {
     color: red;
 }
