--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ div.mario-intro p {
 
 h6 {
     color: white;
-    background-color: grey;
+    background-color: black;
     text-align: center;
     font-size: 20px;
     padding: 15px;
